--- a/vignettes/geometr.Rmd
+++ b/vignettes/geometr.Rmd
@@ -232,7 +232,6 @@ visualise(`Clocaenog - tree heights` = trees, linecol = "height")
 
 ## Other slots
 
-
 - has a history slot that contains the provenance of a geom
 - has a scale, which is either absolute or relative, the latter case then contains points relative to the reference window
 - has a reference window instead of an extent (like in spatstat)
@@ -277,9 +276,8 @@ treeTheme <- setTheme(geom = list(pointsize = c(0.05, 0.77)))
 visualise(`Clocaenog - tree diameters` = trees, theme = treeTheme, 
           pointsize = "dbh")
 
-# needs another legend setup... working on it.
-# visualise(`Clocaenog - tree diameters` = trees, theme = treeTheme, 
-#           pointsize = "dbh", linecol = "height")
+visualise(`Clocaenog - tree diameters` = trees, theme = treeTheme,
+          pointsize = "dbh", linecol = "height")
 ```
 
 # Other tools in `geometr`
@@ -289,3 +287,4 @@ visualise(`Clocaenog - tree diameters` = trees, theme = treeTheme,
 
 
 - also mention gt_sketch somewhere.
+- check whether zooming works.
